--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,5 @@
     <string name="action_settings">Settings</string>
     <string name="snooze">SNOOZE</string>
     <string name="stop">STOP</string>
+    <string name="alarm_time">Alarm Time</string>
 </resources>
