--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,7 @@
     <string name="alarm_time">Alarm Time</string>
     <string name="minute">Minute</string>
     <string name="_00">00</string>
+    <string name="snooze">SNOOZE</string>
+    <string name="interval_minutes">Interval (minutes)</string>
+    <string name="times">Times</string>
 </resources>
